# PicCompressor

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  PicCompressor.slnx  README.de.md  README.md  README.ru.md  agent_instructions.md
.github/workflows/: release.yml
docs/: development.md  releasing.md  requirements.md
docs/UI/: PicCompressor.html
native/: CMakeLists.txt  dependencies.lock.cmake
native/include/: piccompressor_native.h
native/src/: pc_exif.cpp  pc_exif.h  piccompressor_native.cpp
native/tests/: abi_smoke.cpp  exif_test.cpp
scripts/: build-native-linux-x64.sh  build-native-win-x64.ps1  generate-app-icon.ps1  publish-win-x64.ps1  release-github.ps1
src/PicCompressor.Application/: ApplicationSettings.cs  CompressionBatchExecutor.cs  CompressionBatchPlanner.cs  CompressionExecutor.cs  CompressionHistory.cs  CompressionJobFactory.cs  CompressionResourceGate.cs  CompressionResourceLimits.cs  Diagnostics.cs  EngineCatalog.cs  EngineRuntimeLimits.cs  ICompressionEngine.cs  IFileSystem.cs  IInputDiscovery.cs  IInputImageInspector.cs  INativeCodecBridge.cs  IOutputFileSystem.cs  IPreviewRenderer.cs  InputValidationLimits.cs  JobCreationException.cs  JpegOptimizationMarker.cs  OutputPathPlanner.cs  OutputPublicationException.cs  PicCompressor.Application.csproj  SafeOutputPublisher.cs
src/PicCompressor.Cli/: AssemblyInfo.cs  CliApplication.cs  CliOptions.cs  PicCompressor.Cli.csproj  Program.cs
src/PicCompressor.Desktop/: ApplicationCompressionService.cs  ApplicationEngineCatalogService.cs  DesktopClipboardImportService.cs  DesktopFileActionService.cs  DesktopNotificationService.cs  PersistentHistoryService.cs  PicCompressor.Desktop.csproj  Program.cs  VelopackUpdateService.cs
src/PicCompressor.Desktop/Properties/: launchSettings.json
src/PicCompressor.Domain/: CompressionEngineSettings.cs  CompressionErrorCategory.cs  CompressionJob.cs  CompressionPolicies.cs  InputImageInfo.cs  JobStatus.cs
src/PicCompressor.Engine.Guetzli/: GuetzliEngineAdapter.cs  PicCompressor.Engine.Guetzli.csproj
src/PicCompressor.Engine.Jpegli/: JpegliEngineAdapter.cs  PicCompressor.Engine.Jpegli.csproj
src/PicCompressor.Gui/: App.axaml  App.axaml.cs  AssemblyInfo.cs  PicCompressor.Gui.csproj  app.manifest
src/PicCompressor.Gui/Converters/: NavConverters.cs
src/PicCompressor.Gui/Localization/: LocalizeExtension.cs  Localizer.cs  Strings.de.resx  Strings.resx
src/PicCompressor.Gui/Services/: CompressionContracts.cs  DeepLink.cs  EngineIds.cs  IClipboardImportService.cs  ICompressionService.cs  IEngineCatalogService.cs  IFileActionService.cs  IHistoryService.cs  INotificationService.cs  IUpdateService.cs  ThumbnailCache.cs  UnconfiguredInputDiscovery.cs
src/PicCompressor.Gui/Themes/: Controls.axaml  Palette.axaml
src/PicCompressor.Gui/ViewModels/: AboutViewModel.cs  AppearanceViewModel.cs  ByteFormat.cs  CompareViewModel.cs  DashboardViewModel.cs  HistoryViewModel.cs  MainWindowViewModel.cs  ObservableObject.cs  PreviewBitmap.cs  QueueItemViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  UpdateViewModel.cs
src/PicCompressor.Gui/Views/: CompareView.axaml  CompareView.axaml.cs  DashboardView.axaml  DashboardView.axaml.cs  HistoryView.axaml  HistoryView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs
src/PicCompressor.Infrastructure/: ApplicationDataPaths.cs  JsonApplicationSettingsStore.cs  JsonLinesDiagnosticLog.cs  PhysicalFileSystem.cs  PhysicalInputDiscovery.cs  PhysicalInputImageInspector.cs  PicCompressor.Infrastructure.csproj  SqliteCompressionHistoryStore.cs  TemporaryInputStore.cs
src/PicCompressor.NativeInterop/: AssemblyInfo.cs  NativeCodecBridge.cs  NativeLibraryLoader.cs  NativeMethods.cs  PicCompressor.NativeInterop.csproj
tests/PicCompressor.Application.Tests/: CompressionBatchExecutorTests.cs  CompressionBatchPlannerTests.cs  CompressionExecutorTests.cs  CompressionJobFactoryTests.cs  EngineCatalogTests.cs  JpegOptimizationMarkerTests.cs  OutputPathPlannerTests.cs  PicCompressor.Application.Tests.csproj  SafeOutputPublisherTests.cs
tests/PicCompressor.Cli.Tests/: CliApplicationTests.cs  CliOptionsTests.cs  PicCompressor.Cli.Tests.csproj
tests/PicCompressor.Desktop.Tests/: ApplicationCompressionServiceTests.cs  PicCompressor.Desktop.Tests.csproj
tests/PicCompressor.Domain.Tests/: CompressionJobTests.cs  GuetzliSettingsTests.cs  InputImageInfoTests.cs  JobStatusTransitionsTests.cs  JpegliSettingsTests.cs  PicCompressor.Domain.Tests.csproj
tests/PicCompressor.Engine.Guetzli.Tests/: GuetzliEngineAdapterTests.cs  PicCompressor.Engine.Guetzli.Tests.csproj
tests/PicCompressor.Engine.Jpegli.Tests/: JpegliEngineAdapterTests.cs  PicCompressor.Engine.Jpegli.Tests.csproj
tests/PicCompressor.Gui.Tests/: AboutViewModelTests.cs  AssemblyInfo.cs  CompareViewModelTests.cs  DashboardViewModelTests.cs  DeepLinkTests.cs  Fakes.cs  LocalizationConsistencyTests.cs  LocalizerTests.cs  MainWindowViewModelTests.cs  PicCompressor.Gui.Tests.csproj  SettingsAndOutcomeTests.cs  UpdateViewModelTests.cs  XamlTextResourceTests.cs
tests/PicCompressor.Gui.ViewTests/: CompareViewTests.cs  CompareWipeTests.cs  HeadlessTestApplication.cs  PicCompressor.Gui.ViewTests.csproj  QueueListTests.cs
tests/PicCompressor.Infrastructure.Tests/: JsonApplicationSettingsStoreTests.cs  JsonLinesDiagnosticLogTests.cs  PhysicalFileSystemTests.cs  PhysicalInputDiscoveryTests.cs  PhysicalInputImageInspectorTests.cs  PicCompressor.Infrastructure.Tests.csproj  SafeOutputPublisherIntegrationTests.cs  SqliteCompressionHistoryStoreTests.cs  TemporaryInputStoreTests.cs  Usings.cs
tests/PicCompressor.NativeInterop.Tests/: NativeCodecBridgeTests.cs  PicCompressor.NativeInterop.Tests.csproj
